--- a/index.html
+++ b/index.html
@@ -95,6 +95,38 @@
     </div>
   </section>
 
+  <section>
+
+    <div class="container-titulo">
+      <p class="titulo-seccion-claro">Beneficios de la práctica deportiva</p>
+
+
+    </div>
+
+    <div class="container-acordeon">
+
+
+    <div class="acordeon">
+      <div class="acordeon-header" onclick="desplegar(event)">Beneficios para la salud física</div>
+      <div class="acordeon-body">
+       <p class="contenidoBeneficios">La práctica regular de deportes tiene un impacto positivo en la salud física de las personas. El ejercicio ayuda a fortalecer los músculos, huesos y articulaciones, y reduce el riesgo de enfermedades cardiovasculares, obesidad y diabetes. Además, el deporte también contribuye a mejorar la capacidad respiratoria y aumentar la energía y resistencia física.</p> 
+      </div>
+      <div class="acordeon-header" onclick="desplegar(event)">Beneficios para la salud mental</div>
+      <div class="acordeon-body">
+        <p class="contenidoBeneficios">El deporte no solo tiene beneficios para el cuerpo, sino también para la mente. La actividad física libera endorfinas, hormonas que producen una sensación de bienestar y reducen el estrés y la ansiedad. Además, el deporte fomenta la concentración, la autoestima y la confianza en uno mismo, lo que contribuye a mejorar la salud mental y emocional</p>
+      </div>
+      <div class="acordeon-header" onclick="desplegar(event)">Beneficios sociales</div>
+      <div class="acordeon-body">
+        <p class="contenidoBeneficios">La práctica del deporte también tiene beneficios sociales. El deporte es una actividad que puede realizarse en grupo, lo que fomenta la convivencia, el trabajo en equipo y la solidaridad. Además, el deporte puede servir como herramienta para la integración social y la inclusión, al promover valores como el respeto, la tolerancia y la igualdad entre las personas.</p>
+      </div>
+    </div>
+
+  </div>
+
+
+
+
+
   <section id="instalaciones">
     <!-- Título de sección  Instalaciones -->
     <div class="container-titulo">
@@ -351,30 +383,7 @@
       </div>
   </section>
 
-  <section>
-
-    <div class="container-titulo">
-      <p class="titulo-seccion-claro">Beneficios del deporte</p>
-    </div>
-
-    <div class="container-acordeon">
-
-    <div class="acordeon">
-      <div class="acordeon-header" onclick="desplegar(event)">Beneficios para la salud física</div>
-      <div class="acordeon-body">
-        La práctica regular de deportes tiene un impacto positivo en la salud física de las personas. El ejercicio ayuda a fortalecer los músculos, huesos y articulaciones, y reduce el riesgo de enfermedades cardiovasculares, obesidad y diabetes. Además, el deporte también contribuye a mejorar la capacidad respiratoria y aumentar la energía y resistencia física.
-      </div>
-      <div class="acordeon-header" onclick="desplegar(event)">Beneficios para la salud mental</div>
-      <div class="acordeon-body">
-        El deporte no solo tiene beneficios para el cuerpo, sino también para la mente. La actividad física libera endorfinas, hormonas que producen una sensación de bienestar y reducen el estrés y la ansiedad. Además, el deporte fomenta la concentración, la autoestima y la confianza en uno mismo, lo que contribuye a mejorar la salud mental y emocional
-      </div>
-      <div class="acordeon-header" onclick="desplegar(event)">Beneficios sociales</div>
-      <div class="acordeon-body">
-        La práctica del deporte también tiene beneficios sociales. El deporte es una actividad que puede realizarse en grupo, lo que fomenta la convivencia, el trabajo en equipo y la solidaridad. Además, el deporte puede servir como herramienta para la integración social y la inclusión, al promover valores como el respeto, la tolerancia y la igualdad entre las personas.
-      </div>
-    </div>
-
-  </div>
+ 
 
   
   </section>
