--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     </div>
   </header>
 
-  <section id="conocenos" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">
+  <section id="conocenos" class="parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">
 
     
     <!-- Título de sección  Conócenos -->
     <div class="container-titulo">
-      <p class="titulo-seccion-claro parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png"">CONÓCENOS</p>
+      <p class="titulo-seccion-claro parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png"">CONÓCENOS</p>
     </div>
 
     <!-- Contenido sección Conócenos -->
@@ -106,14 +106,14 @@
 
   <section>
 
-    <div class="container-titulo parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png"></div>
-    <p class="titulo-seccion-claro parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">Beneficios de la práctica deportiva</p>
+    <div class="container-titulo parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png"></div>
+    <p class="titulo-seccion-claro parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">Beneficios de la práctica deportiva</p>
     </div>
 
-    <div class="container-acordeon parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">
+    <div class="container-acordeon parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">
 
 
-      <div class="acordeon parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">
+      <div class="acordeon parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">
         <div class="acordeon-header" onclick="desplegar(event)">Beneficios para la salud física</div>
         <div class="acordeon-body">
           <p class="contenidoBeneficios">La práctica regular de deportes tiene un impacto positivo en la salud física de
@@ -143,10 +143,10 @@
 
 
 
-    <section id="instalaciones" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">
+    <section id="instalaciones" class="parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">
       <!-- Título de sección  Instalaciones -->
       <div class="container-titulo">
-        <p class="titulo-seccion-oscuro parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">INSTALACIONES</p>
+        <p class="titulo-seccion-oscuro parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">INSTALACIONES</p>
       </div>
 
       <!-- Contenido sección instalaciones -->
@@ -201,15 +201,15 @@
       </div>
     </section>
 
-    <section id="actividades parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">
+    <section id="actividades parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">
       <!-- Título de sección  Actividades -->
       <div class="container-titulo">
-        <p class="titulo-seccion-claro parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">ACTIVIDADES</p>
+        <p class="titulo-seccion-claro parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">ACTIVIDADES</p>
       </div>
 
       <!-- Contenido sección actividades -->
       <!-- Menú / pestañas-->
-      <div class="container-actividades parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">
+      <div class="container-actividades parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">
         <div class="container-galeria-actividades">
           <div class="pestanas">
             <p id="pindoor" class="pestanasP pestanasPActiva" onclick="selectPest('act_indoor','pindoor')"> INDOOR</p>
@@ -350,11 +350,11 @@
     <section id="activate">
       <!-- Título de sección  Actívate -->
       <div class="container-titulo">
-        <p class="titulo-seccion-oscuro parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">ACTÍVATE</p>
+        <p class="titulo-seccion-oscuro parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">ACTÍVATE</p>
       </div>
 
       <!-- Contenido sección Actívate -->
-      <div class="container-activate parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png">
+      <div class="container-activate parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">
         <!-- Imagen localizacion -->
         <div class="fondo-activate">
           <div class="localizacion" data-aos="fade-right" data-aos-duration="1000">
@@ -409,7 +409,7 @@
   <!-- Pie de página  -->
   <footer id="pie-pagina">
     <!-- Redes sociales  -->
-    <div class="container-pie-pagina parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/FondoParallax2.png"">
+    <div class="container-pie-pagina parallax-window" data-parallax="scroll" data-bleed="10" data-image-src="/media/imagenes/parallax/FondoParallax1.png">
 
       <a class="rrss" title="Twitch" href="http://www.twitch.com">
         <svg class="rrss_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
