--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   <title>Sport Time</title>
   <link rel="stylesheet" href="/css/estilos.css" />
   <script src="/js/scripts.js"></script>
+
+ <!-- Google Fonts Teko  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet" />
-  <!-- Google Fonts Teko  -->
-
+ 
+<!-- Google Icons  -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <!-- Google Icons  -->
-
+  
+<!--Libreria AOS-->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -24,6 +26,13 @@
 <link rel="preload" as="image" href="/media/imagenes/header/Hero1.jpg">
 <link rel="preload" as="image" href="/media/imagenes/header/Hero2.jpg">
 <link rel="preload" as="image" href="/media/imagenes/header/Hero3.jpg">
+
+<!--Libreria Parallax-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+<script src="js/parallax.js-1.5.0/parallax.js- 1.5.0/parallax.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"> </script>
+<script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
+
 
 </head>
 
@@ -59,7 +68,7 @@
     </div>
   </header>
 
-  <section id="conocenos">
+  <section id="conocenos" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax1.png">
     <!-- Título de sección  Conócenos -->
     <div class="container-titulo">
       <p class="titulo-seccion-claro">CONÓCENOS</p>
@@ -95,7 +104,7 @@
     </div>
   </section>
 
-  <section>
+  
 
     <div class="container-titulo">
       <p class="titulo-seccion-claro">Beneficios de la práctica deportiva</p>
@@ -127,7 +136,7 @@
 
 
 
-  <section id="instalaciones">
+  <section id="instalaciones" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax1.png">
     <!-- Título de sección  Instalaciones -->
     <div class="container-titulo">
       <p class="titulo-seccion-oscuro">INSTALACIONES</p>
@@ -185,7 +194,7 @@
     </div>
   </section>
 
-  <section id="actividades">
+  <section id="actividades" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax1.png">
     <!-- Título de sección  Actividades -->
     <div class="container-titulo">
       <p class="titulo-seccion-claro">ACTIVIDADES</p>
@@ -331,7 +340,7 @@
   </section>
 
 
-  <section id="activate">
+  <section id="activate" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax1.png">
     <!-- Título de sección  Actívate -->
     <div class="container-titulo">
       <p class="titulo-seccion-oscuro">ACTÍVATE</p>
@@ -386,7 +395,7 @@
  
 
   
-  </section>
+  
 
 
 
