--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <ul class="lista-menu">
           <li><a href="">INICIO</a></li>
           <li><a href="#conocenos">CONÓCENOS</a></li>
+          <li><a href="#beneficios">BENEFICIOS</a></li>
           <li><a href="#instalaciones">INSTALACIONES</a></li>
           <li><a href="#actividades">ACTIVIDADES</a>
             <ul class="lista-submenu">
@@ -68,7 +69,7 @@
     </div>
   </header>
 
-  <section id="conocenos" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax1.png">
+  <section id="conocenos" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax2.png">
     <!-- Título de sección  Conócenos -->
     <div class="container-titulo">
       <p class="titulo-seccion-claro">CONÓCENOS</p>
@@ -106,13 +107,13 @@
 
   
 
-    <div class="container-titulo">
+    <div id="beneficios" class="container-titulo">
       <p class="titulo-seccion-claro">Beneficios de la práctica deportiva</p>
 
 
     </div>
 
-    <div class="container-acordeon">
+    <div class="container-acordeon parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax2.png">
 
 
     <div class="acordeon">
@@ -136,7 +137,7 @@
 
 
 
-  <section id="instalaciones" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax1.png">
+  <section id="instalaciones" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax2.png">
     <!-- Título de sección  Instalaciones -->
     <div class="container-titulo">
       <p class="titulo-seccion-oscuro">INSTALACIONES</p>
@@ -146,7 +147,7 @@
     <div class="container-instalaciones">
       <!-- Galería de imágenes -->
 
-      <div class="container-galeria" data-aos="zoom-out" data-aos-duration="1000">
+      <div class="container-galeria" >
 
         <div data-aos="fade-right" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
             src="/media/imagenes/instalaciones/Instalaciones1.jpg" alt="Sala con esterillas"> </div>
@@ -194,7 +195,7 @@
     </div>
   </section>
 
-  <section id="actividades" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax1.png">
+  <section id="actividades" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax2.png">
     <!-- Título de sección  Actividades -->
     <div class="container-titulo">
       <p class="titulo-seccion-claro">ACTIVIDADES</p>
@@ -203,7 +204,7 @@
     <!-- Contenido sección actividades -->
     <!-- Menú / pestañas-->
     <div class="container-actividades">
-      <div class="container-galeria-actividades" name="link_container" data-aos="zoom-out" data-aos-duration="1000">
+      <div class="container-galeria-actividades">
         <div class="pestanas">
           <p id="pindoor" class="pestanasP pestanasPActiva" onclick="selectPest('act_indoor','pindoor')"> INDOOR</p>
         </div>
@@ -340,7 +341,7 @@
   </section>
 
 
-  <section id="activate" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax1.png">
+  <section id="activate" class="parallax-window" data-parallax="scroll" data-image-src="/media/imagenes/parallax/Parallax2.png">
     <!-- Título de sección  Actívate -->
     <div class="container-titulo">
       <p class="titulo-seccion-oscuro">ACTÍVATE</p>
