--- a/index.html
+++ b/index.html
@@ -103,7 +103,53 @@
         </p>
       </div>
     </div>
+
+
+
+<!-- Equipo -->
+
+
+<div id="team" class="container-titulo">
+  <p class="titulo-seccion-claro">Equipo</p>
+</div>
+
+<div class="container-equipo parallax-window" data-parallax="scroll"
+  data-image-src="/media/imagenes/parallax/parallaxBack.png">
+
+
+  <div class="equipo">
+    <div class="galeria-equipo">
+      <img src="/media/imagenes/equipo/Equipo1.jpg" alt="Entrenador1" class="equipoImg">
+      <img src="/media/imagenes/equipo/Equipo2.jpg" alt="Entrenador1" class="equipoImg">
+      <img src="/media/imagenes/equipo/Equipo3.jpg" alt="Entrenador1" class="equipoImg">
+      <img src="/media/imagenes/equipo/Equipo4.jpg" alt="Entrenador1" class="equipoImg">
+      <img src="/media/imagenes/equipo/Equipo5.jpg" alt="Entrenador1" class="equipoImg">
+      <img src="/media/imagenes/equipo/Equipo6.jpg" alt="Entrenador1" class="equipoImg">
+    </div>
+  </div>
+
+
+
+
+
+
+
+
   </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   
 
