--- a/index.html
+++ b/index.html
@@ -122,29 +122,29 @@
       
      
       <div class="tooltip-container">
-        <img src="/media/imagenes/equipo/Equipo1.jpg" alt="Entrenador1" class="equipoImg tooltip-trigger">
-        <span class="tooltip-text">Clark Kent</span>
+        <img src="/media/imagenes/equipo/Equipo1.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+        <span class="tooltip-contenido">Clark Kent</span>
       </div>
 
       <div class="tooltip-container">
-        <img src="/media/imagenes/equipo/Equipo2.jpg" alt="Entrenador1" class="equipoImg tooltip-trigger">
-        <span class="tooltip-text">Bruce Wayne</span>
+        <img src="/media/imagenes/equipo/Equipo2.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+        <span class="tooltip-contenido">Bruce Wayne</span>
       </div>
       <div class="tooltip-container">
-        <img src="/media/imagenes/equipo/Equipo3.jpg" alt="Entrenador1" class="equipoImg tooltip-trigger">
-        <span class="tooltip-text">Diana Prince</span>
+        <img src="/media/imagenes/equipo/Equipo3.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+        <span class="tooltip-contenido">Diana Prince</span>
       </div>
       <div class="tooltip-container">
-        <img src="/media/imagenes/equipo/Equipo4.jpg" alt="Entrenador1" class="equipoImg tooltip-trigger">
-        <span class="tooltip-text">Peter Parker</span>
+        <img src="/media/imagenes/equipo/Equipo4.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+        <span class="tooltip-contenido">Peter Parker</span>
       </div>
       <div class="tooltip-container">
-        <img src="/media/imagenes/equipo/Equipo5.jpg" alt="Entrenador1" class="equipoImg tooltip-trigger">
-        <span class="tooltip-text">Logan</span>
+        <img src="/media/imagenes/equipo/Equipo5.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+        <span class="tooltip-contenido">Logan</span>
       </div>
       <div class="tooltip-container">
-        <img src="/media/imagenes/equipo/Equipo6.jpg" alt="Entrenador1" class="equipoImg tooltip-trigger">
-        <span class="tooltip-text">Natasha Romanoff</span>
+        <img src="/media/imagenes/equipo/Equipo6.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+        <span class="tooltip-contenido">Natasha Romanoff</span>
       </div>
 
 
