--- a/index.html
+++ b/index.html
@@ -113,8 +113,6 @@
 
 
     <!-- Equipo -->
-
-
     <div id="team" class="container-titulo">
       <p class="titulo-seccion-claro">Equipo</p>
     </div>
@@ -158,7 +156,7 @@
 
   </section>
 
-
+ <!-- Beneficios -->
   <div id="beneficios" class="container-titulo">
     <p class="titulo-seccion-claro">Beneficios de la práctica deportiva</p>
   </div>
@@ -192,9 +190,6 @@
     </div>
 
   </div>
-
-
-
 
 
   <section id="instalaciones" class="parallax-window" data-parallax="scroll"
@@ -457,13 +452,6 @@
       </div>
   </section>
 
-
-
-
-
-
-
-
   <!-- Pie de página  -->
   <footer id="pie-pagina">
     <!-- Redes sociales  -->
@@ -504,14 +492,10 @@
 
   <script>
     AOS.init();
-
-  </script>
-
-  <script>
     //setInterval(heroSlideShow,3000);
     setInterval(heroSlideShowAnim, 4000);
     comeToLight();
-    activarTooltip();
+    //activarTooltip();
   </script>
 
 </body>
