--- a/index.html
+++ b/index.html
@@ -469,10 +469,10 @@
 
 <div class="filtros">
     <div class="container-btn-filtro">
-    <button class="btn-filtro" onclick="filterImages('todos')">Todos</button>
-    <button class="btn-filtro" onclick="filterImages('box')">Boxeo</button>
-    <button class="btn-filtro" onclick="filterImages('fut')">Fútbol</button>
-    <button class="btn-filtro" onclick="filterImages('run')">Running</button>
+    <button class="btn-filtro btn-filtro-click" onclick="filterImages('todos'), clicado(this)" >Todos</button>
+    <button class="btn-filtro btn-filtro-click" onclick="filterImages('box'), clicado(this)">Boxeo</button>
+    <button class="btn-filtro btn-filtro-click" onclick="filterImages('fut'), clicado(this)">Fútbol</button>
+    <button class="btn-filtro btn-filtro-click" onclick="filterImages('run'), clicado(this)">Running</button>
     </div>
     
     
