--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- INICIO conocenos -->
   <section id="conocenos" class="parallax-window" data-parallax="scroll"
-    data-image-src="/media/imagenes/parallax/parallaxBack.png">
+    data-image-src="/media/imagenes/parallax/parallaxBack.png" alt="fondo parallax">
     <!-- Título de sección  Conócenos -->
     <div class="container-titulo">
       <p class="titulo-seccion-claro">CONÓCENOS</p>
@@ -120,34 +120,34 @@
     </div>
 
     <div class="container-equipo parallax-window" data-parallax="scroll"
-      data-image-src="/media/imagenes/parallax/parallaxBack.png">
+      data-image-src="/media/imagenes/parallax/parallaxBack.png" alt="fondo parallax">
 
       <div class="equipo">
         <div class="galeria-equipo">
 
           <div class="tooltip-container">
-            <img src="/media/imagenes/equipo/Equipo1.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+            <img src="/media/imagenes/equipo/Equipo1.jpg" alt="Entrenador fitness" class="equipoImg tooltip-mostrar">
             <span class="tooltip-contenido">Clark Kent</span>
           </div>
 
           <div class="tooltip-container">
-            <img src="/media/imagenes/equipo/Equipo2.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+            <img src="/media/imagenes/equipo/Equipo2.jpg" alt="Entrenador musculación" class="equipoImg tooltip-mostrar">
             <span class="tooltip-contenido">Bruce Wayne</span>
           </div>
           <div class="tooltip-container">
-            <img src="/media/imagenes/equipo/Equipo3.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+            <img src="/media/imagenes/equipo/Equipo3.jpg" alt="Entrenadora de Yoga" class="equipoImg tooltip-mostrar">
             <span class="tooltip-contenido">Diana Prince</span>
           </div>
           <div class="tooltip-container">
-            <img src="/media/imagenes/equipo/Equipo4.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+            <img src="/media/imagenes/equipo/Equipo4.jpg" alt="Entrenador de fitness" class="equipoImg tooltip-mostrar">
             <span class="tooltip-contenido">Peter Parker</span>
           </div>
           <div class="tooltip-container">
-            <img src="/media/imagenes/equipo/Equipo5.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+            <img src="/media/imagenes/equipo/Equipo5.jpg" alt="Entrenador de natación" class="equipoImg tooltip-mostrar">
             <span class="tooltip-contenido">Logan</span>
           </div>
           <div class="tooltip-container">
-            <img src="/media/imagenes/equipo/Equipo6.jpg" alt="Entrenador1" class="equipoImg tooltip-mostrar">
+            <img src="/media/imagenes/equipo/Equipo6.jpg" alt="Entrenadora de fitness" class="equipoImg tooltip-mostrar">
             <span class="tooltip-contenido">Natasha Romanoff</span>
           </div>
 
@@ -173,12 +173,12 @@
       </div>
 
       <div class="galeria-filtro">
-        <img src="/media/imagenes/estrellas/estrella1.jpeg" class="imgfiltro fut">
-        <img src="/media/imagenes/estrellas/estrella2.png" class="imgfiltro fut">
-        <img src="/media/imagenes/estrellas/estrella3.jpg" class="imgfiltro box">
-        <img src="/media/imagenes/estrellas/estrella4.jpg" class="imgfiltro box">
-        <img src="/media/imagenes/estrellas/estrella5.jpg" class="imgfiltro run">
-        <img src="/media/imagenes/estrellas/estrella6.jpg" class="imgfiltro run">
+        <img src="/media/imagenes/estrellas/estrella1.jpeg" alt="Lionel Messi" class="imgfiltro fut">
+        <img src="/media/imagenes/estrellas/estrella2.png" alt="Alexia Putellas" class="imgfiltro fut">
+        <img src="/media/imagenes/estrellas/estrella3.jpg" alt="Mohammed Ali" class="imgfiltro box">
+        <img src="/media/imagenes/estrellas/estrella4.jpg" alt="Jean Claude Van Dame" class="imgfiltro box">
+        <img src="/media/imagenes/estrellas/estrella5.jpg" alt="Usain Bolt" class="imgfiltro run">
+        <img src="/media/imagenes/estrellas/estrella6.jpg" alt="Simon Biles" class="imgfiltro run">
 
       </div>
     </div>
@@ -221,7 +221,7 @@
 
   <!-- INICIO Instalaciones -->
   <section id="instalaciones" class="parallax-window" data-parallax="scroll"
-    data-image-src="/media/imagenes/parallax/parallaxBack.png">
+    data-image-src="/media/imagenes/parallax/parallaxBack.png" alt="fondo parallax">
     <!-- Título de sección  Instalaciones -->
     <div class="container-titulo">
       <p class="titulo-seccion-oscuro">INSTALACIONES</p>
@@ -281,7 +281,7 @@
 
   <!-- INICIO Actividades -->
   <section id="actividades" class="parallax-window" data-parallax="scroll"
-    data-image-src="/media/imagenes/parallax/parallaxBack.png">
+    data-image-src="/media/imagenes/parallax/parallaxBack.png" alt="fondo parallax">
     <!-- Título de sección  Actividades -->
     <div class="container-titulo">
       <p class="titulo-seccion-claro">ACTIVIDADES</p>
@@ -431,7 +431,7 @@
 
   <!-- INICIO Activate -->
   <section id="activate" class="parallax-window" data-parallax="scroll"
-    data-image-src="/media/imagenes/parallax/parallaxBack.png">
+    data-image-src="/media/imagenes/parallax/parallaxBack.png" alt="fondo parallax">
     <!-- Título de sección  Actívate -->
     <div class="container-titulo">
       <p class="titulo-seccion-oscuro">ACTÍVATE</p>
@@ -439,7 +439,7 @@
 
     <!-- Contenido sección Actívate -->
     <div class="container-activate parallax-window" data-parallax="scroll"
-      data-image-src="/media/imagenes/parallax/parallaxBack.png">
+      data-image-src="/media/imagenes/parallax/parallaxBack.png" alt="fondo parallax">
       <!-- Imagen localizacion -->
       <div class="fondo-activate" data-aos="zoom-out" data-aos-duration="1000">
         <div class="localizacion" data-aos="fade-right" data-aos-duration="1000">
@@ -454,18 +454,18 @@
         <div id="container-formulario" data-aos="fade-left" data-aos-duration="1000">
           <form id="formulario" action="">
             <p class="datos-contacto">Datos de contacto</p>
-            <label for="nombre">
+            <label for="formNombre">
               <span class="material-symbols-outlined"> account_circle </span>
               Nombre</label>
             <input type="text" id="formNombre" name="nombre" required />
-            <label for="apellidos"><span class="material-symbols-outlined"> account_circle </span>
+            <label for="formApellidos"><span class="material-symbols-outlined"> account_circle </span>
               Apellidos</label>
             <input type="text" id="formApellidos" name="apellidos" required />
-            <label for="telefono">
+            <label for="formTel">
               <span class="material-symbols-outlined">call</span>
               Télefono</label>
             <input type="number" id="formTel" name="telefono" min="99999999" max="999999999" required />
-            <label for="email"><span class="material-symbols-outlined">
+            <label for="formEmail"><span class="material-symbols-outlined">
                 alternate_email
               </span>
               E-mail</label>
