--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sport Time</title>
-  <link rel="stylesheet" href="/css/estilos.css" />
-  <script src="/js/scripts.js"></script>
+  <link rel="stylesheet" href="css/estilos.css" />
+  <script src="js/scripts.js"></script>
 
   <!-- Google Fonts Teko  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
