--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sport Time</title>
   <link rel="stylesheet" href="/css/estilos.css" />
-  <script src="/js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet" />
@@ -21,9 +21,9 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <!-- Pre carga img (navegadores compatibles basados en chromium)  -->
-<link rel="preload" as="image" href="/media/imagenes/header/Hero1.jpg">
-<link rel="preload" as="image" href="/media/imagenes/header/Hero2.jpg">
-<link rel="preload" as="image" href="/media/imagenes/header/Hero3.jpg">
+<link rel="preload" as="image" href="media/imagenes/header/Hero1.jpg">
+<link rel="preload" as="image" href="media/imagenes/header/Hero2.jpg">
+<link rel="preload" as="image" href="media/imagenes/header/Hero3.jpg">
 
 </head>
 
@@ -54,7 +54,7 @@
     </div>
     <!-- Logo  -->
     <div class="container-logo">
-      <img class="logo" src="/media/imagenes/header/logo.png" alt="Logo SportTime" />
+      <img class="logo" src="media/imagenes/header/logo.png" alt="Logo SportTime" />
       <p class="lema">El momento ha llegado</p>
     </div>
   </header>
@@ -78,7 +78,7 @@
       <!-- Video  -->
       <div class="container-video">
         <video class="video_presentacion" width="600" height="400" autoplay controls muted>
-          <source src="/media/video/videoGim.mp4" alt="video gimnasio" type="video/mp4">
+          <source src="media/video/videoGim.mp4" alt="video gimnasio" type="video/mp4">
         </video>
       </div>
 
@@ -108,29 +108,29 @@
       <div class="container-galeria" data-aos="zoom-out" data-aos-duration="1000">
 
         <div data-aos="fade-right" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones1.jpg" alt="Sala con esterillas"> </div>
+            src="media/imagenes/instalaciones/Instalaciones1.jpg" alt="Sala con esterillas"> </div>
         <div data-aos="fade-right" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones2.jpg" alt="Pesas"></div>
+            src="media/imagenes/instalaciones/Instalaciones2.jpg" alt="Pesas"></div>
         <div data-aos="fade-left" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones3.jpg" alt="Jacuzzi"></div>
+            src="media/imagenes/instalaciones/Instalaciones3.jpg" alt="Jacuzzi"></div>
         <div data-aos="fade-left" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones4.jpg" alt="Sala de enterno"></div>
+            src="media/imagenes/instalaciones/Instalaciones4.jpg" alt="Sala de enterno"></div>
         <div data-aos="fade-right" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones5.jpg" alt="Sala de entreno"></div>
+            src="media/imagenes/instalaciones/Instalaciones5.jpg" alt="Sala de entreno"></div>
         <div data-aos="fade-right" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones6.jpg" alt="Piscina"></div>
+            src="media/imagenes/instalaciones/Instalaciones6.jpg" alt="Piscina"></div>
         <div data-aos="fade-left" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones7.jpg" alt="Discos de peso"></div>
+            src="media/imagenes/instalaciones/Instalaciones7.jpg" alt="Discos de peso"></div>
         <div data-aos="fade-left" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones8.jpg" alt="Sala de entreno"></div>
+            src="media/imagenes/instalaciones/Instalaciones8.jpg" alt="Sala de entreno"></div>
         <div data-aos="fade-right" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones9.jpg" alt="Piscina"></div>
+            src="media/imagenes/instalaciones/Instalaciones9.jpg" alt="Piscina"></div>
         <div data-aos="fade-right" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones10.jpg" alt="Pesas"></div>
+            src="media/imagenes/instalaciones/Instalaciones10.jpg" alt="Pesas"></div>
         <div data-aos="fade-left" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones11.jpg" alt="Camilla de masaje"></div>
+            src="media/imagenes/instalaciones/Instalaciones11.jpg" alt="Camilla de masaje"></div>
         <div data-aos="fade-left" data-aos-duration="1000" class="galeria_inst"><img class="img_gal"
-            src="/media/imagenes/instalaciones/Instalaciones12.jpg" alt="Ring boxeo"></div>
+            src="media/imagenes/instalaciones/Instalaciones12.jpg" alt="Ring boxeo"></div>
       </div>
 
       <div id="modalLightBox">
@@ -178,117 +178,117 @@
         <!-- Galería de imágenes -->
         <div class="container_actividades" id="act_indoor">
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades1.jpg" alt="Ejerciio de flexibilidad">
+            <img src="media/imagenes/actividades/indoor/Actividades1.jpg" alt="Ejerciio de flexibilidad">
             <p>Flexibilidad</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades2.jpg" alt="Chicha golpeando saco">
+            <img src="media/imagenes/actividades/indoor/Actividades2.jpg" alt="Chicha golpeando saco">
             <p>Kick Boxing</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades3.jpg" alt="Levantamiento de peso">
+            <img src="media/imagenes/actividades/indoor/Actividades3.jpg" alt="Levantamiento de peso">
             <p>Halterofilia</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades4.jpg" alt="Ejercicio aerobico de combate">
+            <img src="media/imagenes/actividades/indoor/Actividades4.jpg" alt="Ejercicio aerobico de combate">
             <p>Body Combat</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades5.jpg" alt="Ejercicio flexibilidad niños">
+            <img src="media/imagenes/actividades/indoor/Actividades5.jpg" alt="Ejercicio flexibilidad niños">
             <p>Rítmica Kids</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades6.jpg" alt="Escalada indoor">
+            <img src="media/imagenes/actividades/indoor/Actividades6.jpg" alt="Escalada indoor">
             <p>Escalada</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades7.jpg" alt="Pareja haciendo ejercicio">
+            <img src="media/imagenes/actividades/indoor/Actividades7.jpg" alt="Pareja haciendo ejercicio">
             <p>Fitness Duo</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades8.jpg" alt="Clase de Yoga">
+            <img src="media/imagenes/actividades/indoor/Actividades8.jpg" alt="Clase de Yoga">
             <p>Yoga</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/indoor/Actividades9.jpg" alt="Ejercicio fitness">
+            <img src="media/imagenes/actividades/indoor/Actividades9.jpg" alt="Ejercicio fitness">
             <p>Fitness</p>
           </div>
         </div>
 
         <div class="container_actividades" id="act_outdoor">
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades1.jpg" alt="Bicicleta de trial">
+            <img src="media/imagenes/actividades/outdoor/Actividades1.jpg" alt="Bicicleta de trial">
             <p>Bike Trial</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades2.jpg" alt="Ejercicio Crossfit">
+            <img src="media/imagenes/actividades/outdoor/Actividades2.jpg" alt="Ejercicio Crossfit">
             <p>Crossfit</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades3.jpg" alt="Escalada">
+            <img src="media/imagenes/actividades/outdoor/Actividades3.jpg" alt="Escalada">
             <p>Escalada</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades4.jpg" alt="Moto de trial">
+            <img src="media/imagenes/actividades/outdoor/Actividades4.jpg" alt="Moto de trial">
             <p>Motor Trial</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades5.jpg" alt="Partido Beisbol">
+            <img src="media/imagenes/actividades/outdoor/Actividades5.jpg" alt="Partido Beisbol">
             <p>Béisbol</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades6.jpg" alt="Partido de rugby">
+            <img src="media/imagenes/actividades/outdoor/Actividades6.jpg" alt="Partido de rugby">
             <p>Rugby</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades7.jpg" alt="Mujeres andando">
+            <img src="media/imagenes/actividades/outdoor/Actividades7.jpg" alt="Mujeres andando">
             <p>Walking</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades8.jpg" alt="Ejercicio Skate park">
+            <img src="media/imagenes/actividades/outdoor/Actividades8.jpg" alt="Ejercicio Skate park">
             <p>Skate Park</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/outdoor/Actividades9.jpg" alt="Fútbol">
+            <img src="media/imagenes/actividades/outdoor/Actividades9.jpg" alt="Fútbol">
             <p>Fútbol</p>
           </div>
         </div>
 
         <div class="container_actividades" id="act_aquazone">
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades1.jpg" alt="FlyBoard">
+            <img src="media/imagenes/actividades/aquazone/Actividades1.jpg" alt="FlyBoard">
             <p>Fly Board</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades2.jpg" alt="Moto de agua">
+            <img src="media/imagenes/actividades/aquazone/Actividades2.jpg" alt="Moto de agua">
             <p>Motor Aqua</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades3.jpg" alt="Aguas bravas">
+            <img src="media/imagenes/actividades/aquazone/Actividades3.jpg" alt="Aguas bravas">
             <p>Aguas Bravas</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades4.jpg" alt="Fly Beach">
+            <img src="media/imagenes/actividades/aquazone/Actividades4.jpg" alt="Fly Beach">
             <p>Fly Beach</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades5.jpg" alt="Waterpolo">
+            <img src="media/imagenes/actividades/aquazone/Actividades5.jpg" alt="Waterpolo">
             <p>Waterpolo</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades6.jpg" alt="Padel Surf">
+            <img src="media/imagenes/actividades/aquazone/Actividades6.jpg" alt="Padel Surf">
             <p>Padel Surf</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades7.jpg" alt="Niño practicando surf">
+            <img src="media/imagenes/actividades/aquazone/Actividades7.jpg" alt="Niño practicando surf">
             <p>Surf Kids</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades8.jpg" alt="Windsurf">
+            <img src="media/imagenes/actividades/aquazone/Actividades8.jpg" alt="Windsurf">
             <p>Windsurf</p>
           </div>
           <div class="actividades">
-            <img src="/media/imagenes/actividades/aquazone/Actividades9.jpg" alt="Inicio surf">
+            <img src="media/imagenes/actividades/aquazone/Actividades9.jpg" alt="Inicio surf">
             <p>Surf</p>
           </div>
         </div>
@@ -310,7 +310,7 @@
       <div class="fondo-activate" data-aos="zoom-out" data-aos-duration="1000">
         <div class="localizacion" data-aos="fade-right" data-aos-duration="1000">
           <div class="imagen-mapa">
-            <img src="/media/imagenes/activate/mapa.png" alt="">
+            <img src="media/imagenes/activate/mapa.png" alt="">
 
           </div>
         </div>
